--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -28,7 +28,7 @@ env:
   NODE_VERSION: '20.x'                # set this to the node version to use
 
 permissions:
-  contents: read
+  contents: read, write
 
 jobs:
   build:
@@ -36,8 +36,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: npm install, build, and test
-      run: |
+    - name: npm install, build,
+      run: 
         npm install
         npm run build --if-present
         npm run test --if-present
@@ -48,20 +48,7 @@ jobs:
         name: node-app
         path: .
 
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
-      with:
-        name: node-app
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
